[tool.poetry]
name = "django-homework"
version = "0.1.0"
description = ""
authors = ["Rustam Shafikov <mitaleko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2"
psycopg2-binary = "^2.9.10"
black = "^25.1.0"
pillow = "^11.2.1"
ipython = "^9.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
